--- a/Margin.API.yaml
+++ b/Margin.API.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: Margins calculation service1
+  title: Margins calculation service
   description: Calculates the required margins based on specified parameters for specified accounts
   contact:
     name: Menahem Elgavi
